<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_mid"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Views.MainFragments.ExpenseFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/expenses_add"
        android:textColor="@color/black"
        android:textSize="48sp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToOutline="false"
            android:orientation="vertical"
            android:outlineProvider="none">

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00FFEB3B"
                android:gravity="center"
                android:text="@string/expenseFragment_date" />

            <DatePicker
                android:id="@+id/datePicker_expense"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:background="#00FFEB3B"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/expense_category" />

            <Spinner
                android:id="@+id/expense_spinner"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_gravity="center"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/expense_cad" />

            <EditText
                android:id="@+id/editTextNumberDecimal_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkBox_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/expense_recurring" />

            <Spinner
                android:id="@+id/expense_spinner_freq"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_expense_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/expense_add"
        android:textColor="@color/yellow_light"
        app:icon="@drawable/ic_baseline_add_24"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
