<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_layer_drawable"
    tools:context=".Views.MainFragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/profileFragment_name"
        android:textColor="#060D32"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imageView_profile_profilePicture"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:background="@drawable/circle"
        android:outlineProvider="background"
        android:src="@drawable/profile"/>

<!--        tools:src="@tools:sample/avatars" -->


    <LinearLayout
        android:id="@+id/linLayout_profile_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="280dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_profile_budgetTitle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:fontFamily="monospace"
            android:text="@string/profileFragment_budgetTitle"
            android:textColor="#060D32"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_profile_budgetAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout_profile_budgetspent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="320dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_profile_budgetTitleSpent"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:fontFamily="monospace"
            android:text="@string/profile_spent_upper"
            android:textColor="#060D32"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_profile_budgetAmountSpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textSize="24sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_profile_budgetCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="370dp"
        android:layout_marginBottom="20dp" />

</FrameLayout>